# 1brc

./: README.md
datagen/: create_measurements.py
rust/: Cargo.toml
rust/src/: domain.rs  main.rs  solutions.rs
rust/src/solutions/: baseline.rs  plrs.rs  ray.rs  threaded.rs
