[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
polars = {version = "0.39.2", features = ["lazy", "streaming"]}
polars-lazy = {version = "0.39.2", features = ["csv"]}
